	  collapse buddy groups or contacts. (Peter Ruibal)
	* Support saving animated custom smileys as animated images or animated
	  custom smileys. (Andrea Piccinelli)
	* Support for keyboard navigation on the status icon. (Li Yuan)
	* IMG tags without 'id' attributes are turned into links to the image URL.
	  (Dmitry Petroff)

	Finch:
	* The hardware cursor is updated correctly. This will be useful
	  especially for users of braille terminals, screen readers etc.
	* Added a TinyURL plugin, which aids copying longer URLs.

	Pidgin GTK+ Theme Control Plugin:
	* Removed mouse cursor color preferences.
	* Added "Typing Notification Color" preference.
	* Added "Disable Typing Notification Text" preference.
	* Preferences have been reorganized into three tabs for Colors, Fonts, and
	  Miscellaneous categories.

version 2.5.7 (06/20/2009):
	* Yahoo Protocol 16 support, including new HTTPS login method; this should
	  fix a number of login problems that have recently cropped up.  (Sulabh
	  Mahajan, Mike "Maiku" Ruprecht)
	* Only display the AIM "Unable to Retrieve Buddy List" message once per
	  connection.  (Rob Taft)
	* Blocking MSN users not on your buddy list no longer disconnects you.
	* When performing operations on MSN, assume users are on the MSN/Passport
	  network if we don't get network ID's for them.

version 2.5.6 (05/19/2009):
	libpurple:
	* Improve sleep behavior by aggregation of longer timeouts on second
	  boundaries to allow better power saving.  (Arunan Balasubramaniam)
	* Fix various crashes on exit.
	* Make XML parsing more resilient to interactions with other libraries.
	  This, along with the fix for libxml2 bug 564217, fixes the crashes
	  on connect in XMPP with recent gst-plugins-bad (see #8830 for details).
	* Many security related fixes.

	IRC:
	* Correctly handle WHOIS for users who are joined to a large number of
	  channels.
	* Notify the user if a /nick command fails, rather than trying
	  fallback nicks.

	MSN: